kubernetes/PostgreSQL.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d/init.sql
      volumes:
        - name: postgres-initdb
          hostPath:
            path: /todoserver/src/main/resources/init.sql
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
