kubernetes/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: todo_app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: my-registry-secret
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30255 # Uncomment for external service
  type: NodePort
