kubernetes/todo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server
spec:
  selector:
    matchLabels:
      app: todo-server
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      containers:
        - name: todo-server
          image: asu2022/todoserver
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-server
spec:
  selector:
    app: todo-server
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30200
  type: NodePort
